# odbc-scanner-duckdb-extension

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  flake.nix
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
docker/: docker-compose.yml
docs/: ODBC_CONNECTION_STRING_AND_DSN_FORMATS.md
src/: CMakeLists.txt  odbc_attach.cpp  odbc_db.cpp  odbc_scan.cpp  odbc_scan_extension.cpp  odbc_scanner_extension.cpp  odbc_stmt.cpp  odbc_storage.cpp  odbc_utils.cpp
src/include/: exception.hpp  odbc.hpp  odbc_attach.hpp  odbc_db.hpp  odbc_mapping.hpp  odbc_scan.hpp  odbc_scan_extension.hpp  odbc_scanner_extension.hpp  odbc_stmt.hpp  odbc_storage.hpp  odbc_utils.hpp  odbc_write.hpp  sqli.h
src/include/storage/: odbc_catalog.hpp  odbc_delete.hpp  odbc_index.hpp  odbc_index_entry.hpp  odbc_insert.hpp  odbc_schema_entry.hpp  odbc_table_entry.hpp  odbc_transaction.hpp  odbc_transaction_manager.hpp  odbc_update.hpp
src/storage/: CMakeLists.txt  odbc_catalog.cpp  odbc_delete.cpp  odbc_index.cpp  odbc_index_entry.cpp  odbc_insert.cpp  odbc_schema_entry.cpp  odbc_table_entry.cpp  odbc_transaction.cpp  odbc_transaction_manager.cpp  odbc_update.cpp
templates/: .clangd.template  .odbc.ini.template  .odbcinst.ini.template
test/nodejs/: analyze_record_test.js  detect_record_test.js  odbc_scan_test.js  read_record_test.js  write_record_test.js
test/python/: analyze_record.py  detect_record_test.py  odbc_scan_test.py  read_record_test.py  write_record_test.py
test/sql/: odbc_attach_db2.test  odbc_scan.test  odbc_scan_big_query.test  odbc_scan_db2.test  odbc_scan_mariadb.test  odbc_scan_mongo_db.test  odbc_scan_mssql.test  odbc_scan_mysql.test  odbc_scan_oracle.test  odbc_scan_postgres.test  odbc_scan_snowflake.test  odbc_write.test
